trunk/src/antlr-grammar/mypackage/GuoliceParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g 2010-11-06 12:35:33

package mypackage;

import mypackage.Node;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class GuoliceParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PLUS", "MINUS", "MULT", "DIV", "EQUALS", "INCR", "DECR", "PLUSEQUAL", "MINUSEQUAL", "MULTEQUAL", "LESSTHAN", "GRTRTHAN", "ISEQUAL", "NOTEQUAL", "AND_OP", "OR_OP", "MODULO", "NOT_OP", "CIRCLE", "TEXTBOX", "BUTTON", "BOX", "ID", "POSITION_KEYWORD", "COLOR_AREA", "INTEGER", "EVENTTYPE", "LETTER", "DIGIT", "COMMENT", "WS", "'procedure'", "':'", "'('", "')'", "'end'", "'function'", "','", "'Position'", "'StartPoint'", "'Width'", "'Height'", "'R'", "'Text'", "'.'", "';'", "':='", "'constant'", "'var'", "'if'", "'do'", "'elseif'", "'else'", "'while'", "'loop'", "'exit'", "'when'", "'now'", "'return'", "'^'", "'int'", "'float'", "'color'", "'string'", "'\"'", "'\\n'", "'\\r'"
    };
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int LETTER=31;
    public static final int BUTTON=24;
    public static final int MULTEQUAL=13;
    public static final int EQUALS=8;
    public static final int ID=26;
    public static final int T__61=61;
    public static final int EOF=-1;
    public static final int T__60=60;
    public static final int PLUSEQUAL=11;
    public static final int NOTEQUAL=17;
    public static final int T__55=55;
    public static final int MINUSEQUAL=12;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int BOX=25;
    public static final int T__58=58;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int INCR=9;
    public static final int T__59=59;
    public static final int ISEQUAL=16;
    public static final int PLUS=4;
    public static final int DIGIT=32;
    public static final int COMMENT=33;
    public static final int T__50=50;
    public static final int NOT_OP=21;
    public static final int INTEGER=29;
    public static final int TEXTBOX=23;
    public static final int T__42=42;
    public static final int OR_OP=19;
    public static final int T__43=43;
    public static final int LESSTHAN=14;
    public static final int T__40=40;
    public static final int MODULO=20;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int EVENTTYPE=30;
    public static final int POSITION_KEYWORD=27;
    public static final int GRTRTHAN=15;
    public static final int MINUS=5;
    public static final int MULT=6;
    public static final int AND_OP=18;
    public static final int WS=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__70=70;
    public static final int CIRCLE=22;
    public static final int T__37=37;
    public static final int COLOR_AREA=28;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int DECR=10;
    public static final int DIV=7;

    // delegates
    // delegators


        public GuoliceParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public GuoliceParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return GuoliceParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g"; }


    public Node root = null;



    // $ANTLR start "program"
    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:60:1: program : ( procedureDec | functionDec | statement )* ;
    public final void program() throws RecognitionException {
         root = new Node("Program"); 
        try {
            // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:63:2: ( ( procedureDec | functionDec | statement )* )
            // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:63:4: ( procedureDec | functionDec | statement )*
            {
            // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:63:4: ( procedureDec | functionDec | statement )*
            loop1:
            do {
                int alt1=4;
                switch ( input.LA(1) ) {
                case 35:
                    {
                    alt1=1;
                    }
                    break;
                case 40:
                    {
                    alt1=2;
                    }
                    break;
                case ID:
                case 51:
                case 52:
                case 53:
                case 57:
                    {
                    alt1=3;
                    }
                    break;

                }

                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:63:6: procedureDec
            	    {
            	    pushFollow(FOLLOW_procedureDec_in_program344);
            	    procedureDec();

            	    state._fsp--;


            	    }
            	    break;
            	case 2 :
            	    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:63:21: functionDec
            	    {
            	    pushFollow(FOLLOW_functionDec_in_program348);
            	    functionDec();

            	    state._fsp--;


            	    }
            	    break;
            	case 3 :
            	    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:63:35: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_program352);
            	    statement();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

             System.out.println("The root node is: " + root.toString() + "\n");  
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "program"


    // $ANTLR start "procedureDec"
    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:66:1: procedureDec : 'procedure' ':' ID '(' ( parameters )? ')' ( statement | exitStatement )* 'end' 'procedure' ;
    public final void procedureDec() throws RecognitionException {
        try {
            // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:67:2: ( 'procedure' ':' ID '(' ( parameters )? ')' ( statement | exitStatement )* 'end' 'procedure' )
            // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:67:4: 'procedure' ':' ID '(' ( parameters )? ')' ( statement | exitStatement )* 'end' 'procedure'
            {
            match(input,35,FOLLOW_35_in_procedureDec368); 
            match(input,36,FOLLOW_36_in_procedureDec370); 
            match(input,ID,FOLLOW_ID_in_procedureDec371); 
            match(input,37,FOLLOW_37_in_procedureDec374); 
            // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:67:27: ( parameters )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( ((LA2_0>=64 && LA2_0<=67)) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:67:27: parameters
                    {
                    pushFollow(FOLLOW_parameters_in_procedureDec376);
                    parameters();

                    state._fsp--;


                    }
                    break;

            }

            match(input,38,FOLLOW_38_in_procedureDec379); 
            // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:68:3: ( statement | exitStatement )*
            loop3:
            do {
                int alt3=3;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==ID||(LA3_0>=51 && LA3_0<=53)||LA3_0==57) ) {
                    alt3=1;
                }
                else if ( (LA3_0==59) ) {
                    alt3=2;
                }


                switch (alt3) {
            	case 1 :
            	    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:68:5: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_procedureDec385);
            	    statement();

            	    state._fsp--;


            	    }
            	    break;
            	case 2 :
            	    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:68:17: exitStatement
            	    {
            	    pushFollow(FOLLOW_exitStatement_in_procedureDec389);
            	    exitStatement();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            match(input,39,FOLLOW_39_in_procedureDec396); 
            match(input,35,FOLLOW_35_in_procedureDec398); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "procedureDec"


    // $ANTLR start "functionDec"
    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:72:1: functionDec : 'function' type ':' ID '(' ( parameters )? ')' ( statement | returnStatement )* 'end' 'function' ;
    public final void functionDec() throws RecognitionException {
        try {
            // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:74:2: ( 'function' type ':' ID '(' ( parameters )? ')' ( statement | returnStatement )* 'end' 'function' )
            // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:74:4: 'function' type ':' ID '(' ( parameters )? ')' ( statement | returnStatement )* 'end' 'function'
            {
            match(input,40,FOLLOW_40_in_functionDec410); 
            pushFollow(FOLLOW_type_in_functionDec412);
            type();

            state._fsp--;

            match(input,36,FOLLOW_36_in_functionDec414); 
            match(input,ID,FOLLOW_ID_in_functionDec416); 
            match(input,37,FOLLOW_37_in_functionDec419); 
            // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:74:32: ( parameters )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( ((LA4_0>=64 && LA4_0<=67)) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:74:32: parameters
                    {
                    pushFollow(FOLLOW_parameters_in_functionDec421);
                    parameters();

                    state._fsp--;


                    }
                    break;

            }

            match(input,38,FOLLOW_38_in_functionDec424); 
            // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:76:3: ( statement | returnStatement )*
            loop5:
            do {
                int alt5=3;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==ID||(LA5_0>=51 && LA5_0<=53)||LA5_0==57) ) {
                    alt5=1;
                }
                else if ( (LA5_0==62) ) {
                    alt5=2;
                }


                switch (alt5) {
            	case 1 :
            	    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:76:5: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_functionDec433);
            	    statement();

            	    state._fsp--;


            	    }
            	    break;
            	case 2 :
            	    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:76:17: returnStatement
            	    {
            	    pushFollow(FOLLOW_returnStatement_in_functionDec437);
            	    returnStatement();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            match(input,39,FOLLOW_39_in_functionDec444); 
            match(input,40,FOLLOW_40_in_functionDec446); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "functionDec"


    // $ANTLR start "statement"
    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:80:1: statement returns [Node node] : ( assignmentStatement | constantDecStatement | variableDecStatement | ifStatement | whileStatement | procedureCallStatement | evntHandleStatement );
    public final Node statement() throws RecognitionException {
        Node node = null;

        Node assignmentStatement1 = null;


        try {
            // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:82:2: ( assignmentStatement | constantDecStatement | variableDecStatement | ifStatement | whileStatement | procedureCallStatement | evntHandleStatement )
            int alt6=7;
            switch ( input.LA(1) ) {
            case ID:
                {
                switch ( input.LA(2) ) {
                case 50:
                    {
                    alt6=1;
                    }
                    break;
                case 37:
                    {
                    alt6=6;
                    }
                    break;
                case 48:
                    {
                    alt6=7;
                    }
                    break;
                default:
                    NoViableAltException nvae =
                        new NoViableAltException("", 6, 1, input);

                    throw nvae;
                }

                }
                break;
            case 51:
                {
                alt6=2;
                }
                break;
            case 52:
                {
                alt6=3;
                }
                break;
            case 53:
                {
                alt6=4;
                }
                break;
            case 57:
                {
                alt6=5;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }

            switch (alt6) {
                case 1 :
                    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:82:4: assignmentStatement
                    {
                    pushFollow(FOLLOW_assignmentStatement_in_statement466);
                    assignmentStatement1=assignmentStatement();

                    state._fsp--;

                     node = assignmentStatement1;
                    							root.addChild(assignmentStatement1);
                    	

                    }
                    break;
                case 2 :
                    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:85:4: constantDecStatement
                    {
                    pushFollow(FOLLOW_constantDecStatement_in_statement473);
                    constantDecStatement();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:86:4: variableDecStatement
                    {
                    pushFollow(FOLLOW_variableDecStatement_in_statement479);
                    variableDecStatement();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:87:4: ifStatement
                    {
                    pushFollow(FOLLOW_ifStatement_in_statement484);
                    ifStatement();

                    state._fsp--;


                    }
                    break;
                case 5 :
                    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:88:4: whileStatement
                    {
                    pushFollow(FOLLOW_whileStatement_in_statement489);
                    whileStatement();

                    state._fsp--;


                    }
                    break;
                case 6 :
                    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:89:4: procedureCallStatement
                    {
                    pushFollow(FOLLOW_procedureCallStatement_in_statement494);
                    procedureCallStatement();

                    state._fsp--;


                    }
                    break;
                case 7 :
                    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:91:4: evntHandleStatement
                    {
                    pushFollow(FOLLOW_evntHandleStatement_in_statement500);
                    evntHandleStatement();

                    state._fsp--;


                    }
                    break;

            }
            System.out.println("The assignment node is: " + node.toString() + "\n");
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return node;
    }
    // $ANTLR end "statement"


    // $ANTLR start "guiType"
    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:94:1: guiType : ( box | circle | textBox );
    public final void guiType() throws RecognitionException {
        try {
            // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:95:2: ( box | circle | textBox )
            int alt7=3;
            switch ( input.LA(1) ) {
            case BOX:
                {
                alt7=1;
                }
                break;
            case CIRCLE:
                {
                alt7=2;
                }
                break;
            case TEXTBOX:
            case BUTTON:
                {
                alt7=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }

            switch (alt7) {
                case 1 :
                    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:95:4: box
                    {
                    pushFollow(FOLLOW_box_in_guiType511);
                    box();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:96:4: circle
                    {
                    pushFollow(FOLLOW_circle_in_guiType517);
                    circle();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:98:4: textBox
                    {
                    pushFollow(FOLLOW_textBox_in_guiType524);
                    textBox();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "guiType"


    // $ANTLR start "guiCommonProperty"
    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:103:1: guiCommonProperty : ( position | point | color | event );
    public final void guiCommonProperty() throws RecognitionException {
        try {
            // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:104:2: ( position | point | color | event )
            int alt8=4;
            switch ( input.LA(1) ) {
            case 42:
                {
                alt8=1;
                }
                break;
            case 43:
                {
                alt8=2;
                }
                break;
            case COLOR_AREA:
                {
                alt8=3;
                }
                break;
            case EVENTTYPE:
                {
                alt8=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                throw nvae;
            }

            switch (alt8) {
                case 1 :
                    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:104:4: position
                    {
                    pushFollow(FOLLOW_position_in_guiCommonProperty539);
                    position();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:105:4: point
                    {
                    pushFollow(FOLLOW_point_in_guiCommonProperty544);
                    point();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:106:4: color
                    {
